tests/machine/x/hs/tree_sum.error

/workspace/mochi/tests/machine/x/hs/tree_sum.hs:114:18: error:
    • Couldn't match expected type ‘()’ with actual type ‘Tree’
    • In the ‘left’ field of a record
      In the expression:
        Node
          {left = Leaf, value = 1,
           right = Node {left = Leaf, value = 2, right = Leaf}}
      In an equation for ‘t’:
          t = Node
                {left = Leaf, value = 1,
                 right = Node {left = Leaf, value = 2, right = Leaf}}
    |
114 | t = Node {left = Leaf, value = 1, right = Node {left = Leaf, value = 2, right = Leaf}}
    |                  ^^^^

/workspace/mochi/tests/machine/x/hs/tree_sum.hs:114:43: error:
    • Couldn't match expected type ‘()’ with actual type ‘Tree’
    • In the ‘right’ field of a record
      In the expression:
        Node
          {left = Leaf, value = 1,
           right = Node {left = Leaf, value = 2, right = Leaf}}
      In an equation for ‘t’:
          t = Node
                {left = Leaf, value = 1,
                 right = Node {left = Leaf, value = 2, right = Leaf}}
    |
114 | t = Node {left = Leaf, value = 1, right = Node {left = Leaf, value = 2, right = Leaf}}
    |                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/tree_sum.hs:114:56: error:
    • Couldn't match expected type ‘()’ with actual type ‘Tree’
    • In the ‘left’ field of a record
      In the ‘right’ field of a record
      In the expression:
        Node
          {left = Leaf, value = 1,
           right = Node {left = Leaf, value = 2, right = Leaf}}
    |
114 | t = Node {left = Leaf, value = 1, right = Node {left = Leaf, value = 2, right = Leaf}}
    |                                                        ^^^^

/workspace/mochi/tests/machine/x/hs/tree_sum.hs:114:81: error:
    • Couldn't match expected type ‘()’ with actual type ‘Tree’
    • In the ‘right’ field of a record
      In the ‘right’ field of a record
      In the expression:
        Node
          {left = Leaf, value = 1,
           right = Node {left = Leaf, value = 2, right = Leaf}}
    |
114 | t = Node {left = Leaf, value = 1, right = Node {left = Leaf, value = 2, right = Leaf}}
    |                                                                                 ^^^^

/workspace/mochi/tests/machine/x/hs/tree_sum.hs:118:19: error:
    • Couldn't match expected type ‘()’ with actual type ‘Tree’
    • In the first argument of ‘sum_tree’, namely ‘t’
      In the first argument of ‘print’, namely ‘(sum_tree t)’
      In a stmt of a 'do' block: print (sum_tree t)
    |
118 |   print (sum_tree t)
    |                   ^


Context around line 114:
  112| sum_tree t = 0
  113| 
  114| t = Node {left = Leaf, value = 1, right = Node {left = Leaf, value = 2, right = Leaf}}
  115| 
  116| main :: IO ()
